# ChangeLog for dev-ruby/net-sftp
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-sftp/ChangeLog,v 1.56 2013/05/07 17:50:47 ago Exp $

  07 May 2013; Agostino Sarubbo <ago@gentoo.org> net-sftp-2.0.5-r1.ebuild:
  Stable for ppc64, wrt bug #467912

  03 May 2013; Agostino Sarubbo <ago@gentoo.org> net-sftp-2.0.5-r1.ebuild:
  Stable for ppc, wrt bug #467912

  30 Apr 2013; Agostino Sarubbo <ago@gentoo.org> net-sftp-2.0.5-r1.ebuild:
  Stable for x86, wrt bug #467912

  30 Apr 2013; Agostino Sarubbo <ago@gentoo.org> net-sftp-2.0.5-r1.ebuild:
  Stable for amd64, wrt bug #467912

*net-sftp-2.1.1 (13 Apr 2013)

  13 Apr 2013; Hans de Graaff <graaff@gentoo.org> +net-sftp-2.1.1.ebuild:
  Version bump.

*net-sftp-2.0.5-r1 (15 Dec 2012)

  15 Dec 2012; Hans de Graaff <graaff@gentoo.org> +net-sftp-2.0.5-r1.ebuild:
  Revision bump. Add ruby19.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  01 May 2012; Raúl Porcel <armin76@gentoo.org> net-sftp-2.0.5.ebuild:
  Drop ia64/sparc keywords

  20 Aug 2011; Hans de Graaff <graaff@gentoo.org> -net-sftp-2.0.2.ebuild:
  Remove old version.

  22 Jul 2011; Mark Loeser <halcy0n@gentoo.org> net-sftp-2.0.5.ebuild:
  Stable for ppc/ppc64; bug #321103

  04 Jun 2011; Raúl Porcel <armin76@gentoo.org> net-sftp-2.0.5.ebuild:
  ia64 stable wrt #321103

  26 May 2011; Markus Meier <maekke@gentoo.org> net-sftp-2.0.5.ebuild:
  x86 stable, bug #321103

  04 May 2011; Christoph Mende <angelos@gentoo.org> net-sftp-2.0.5.ebuild:
  Stable on amd64 wrt bug #321103

  01 Nov 2010; Hans de Graaff <graaff@gentoo.org> -net-sftp-2.0.4-r1.ebuild,
  net-sftp-2.0.5.ebuild:
  Add missing dependency on dev-ruby/mocha fr FEATURES="test", fixing bug
  342815.

*net-sftp-2.0.5 (25 Aug 2010)

  25 Aug 2010; Hans de Graaff <graaff@gentoo.org> +net-sftp-2.0.5.ebuild: