@@ -1,27 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST net-sftp-2.0.5.gem 61440 SHA256 1b54a3d560c11ce0ad3bae05ad01789ee13c23a271ddeee3caa85ecdcb381353 SHA512 631d2b494b098c74d9f904f381207bf52deda89285544b8f492e2a10c575bcfc341c4929c01eab0bd0c4140d1329601e1966ee4d18903918561d262d3af65d07 WHIRLPOOL ce33fb649669a456ab0e865cce297dded1b1d2124c051b9a4e44544eaded8decb465b17d5cc9062d2dfe394b17ae5fba8120e33457a21c7a26f63fdb71d48503
 DIST net-sftp-2.1.1.gem 67584 SHA256 abce2c871214f5eb35d8bf969e5b5bcf727c355e3624d20bbf489495200df42a SHA512 088c04433c24875bfec3b512be492c0d101ffb5386c9c7521f68d6a2c8d3f980a34ed2e98fe8c040813a4637d4de45d78d89e8d02803f226076a83ba51473fad WHIRLPOOL 927b2797a8d9a3290be706402737b188733df793507264517bddf9f669d82b2c51da4a89f8b0497a43876e2396b4f340b9a9e6f48168b04510fd31548d0ab3ca
+DIST net-sftp-2.1.2.gem 67584 SHA256 3e70b8130b1c86039b0847aeb088a2254df49053023546a5923e5763c923c710 SHA512 126a9537a4ac45150096db4d46ad19e0d8a1833fef3733a1b66ff01463c0d109415f0ef807706ff88be8c5c1395bbd4620e529f06e3c9f746a4ed6ec2cb7d18d WHIRLPOOL fcb0e6ac8d20aaf7f66643d5e15bf1dfd9a41a281048511a12090bf7ba54f7452b6d67ddaf84af2112e552c7833917eb70cf39285501c0bcfccd6c587924ebf6
 EBUILD net-sftp-2.0.5-r1.ebuild 1025 SHA256 d0757e754a2cf2f47328e9931958efc84ec04b07bec38fd66679e5e6f9605fab SHA512 ecc5ae497adeca03808e90d94e51ab5c2e07ab719f9ae1713dab59d79b73b8c421f4d058b4179ae3db538bea1330f34edcb63d74f96ab3d5f8414a94e102fe4d WHIRLPOOL 5ee469593b00df978604290298b5cea2b1d4f7c8d62f1fa2485914b49402a7d519d2e83edb9fef5bbb6b76fcdadb914dd182992607886d143bed3eaa0a574821
 EBUILD net-sftp-2.0.5.ebuild 754 SHA256 eb30d7c540c26e25a567001056f5bab8bc41f759fe78f92f5a28b175cd74c811 SHA512 c5ca5d5ee3078c838642a05fd9e6115c4ae2d035dbff0a851b3822ad26aa7d7f60196ba746ca638ecace08421c4ec03c21c763ab58e490ea0d7a396e2da8e53e WHIRLPOOL de0341a3a3d05f39236b7c7ab5730ed4d67c95be854043328fe2f3225b7075eb09b857dfdf27fffe62274ced74529a46094b59407182d60cd4df3b7ce4f742db
 EBUILD net-sftp-2.1.1.ebuild 670 SHA256 2ee6f1222e579df8910d905620447eab8f264232fd7b6a65124f6afc4942dc28 SHA512 4d931e7f691613389ff5149a9d1b736dd5fd339cc16e6e3e8e283d4f9eadbf01611b2c1085c206a2040a7a02960a079acfae43c5a4292feac927ba5a9738680e WHIRLPOOL 431f175f67344e790a5a86172766b608e7195fb4ddc75ef55e02927bb9edf58c9006905eda618b1100017d34b474ef96a2397e4515148260ccd0d5b8ea58a5b4
-MISC ChangeLog 6736 SHA256 44104a62b9a7643c98c26f5274ca3056ae30c6e7ca4a1391025585ee82bcbee5 SHA512 fb6d23dde0a988e15a6a37b8787a84587f6378002fd606245b797dd2e6862b967e6f474ab0954fb48abc4f95c5123f0e7904c46d7dfecfc55664042ade67f226 WHIRLPOOL be2b6bb212669ac75d941ac2f5a9fa2c253f1eea365b41c00f5a0b3d4ea12ca5367136171baf622194cf978272085973d86d6815022293dac60c4b3993be9710
+EBUILD net-sftp-2.1.2.ebuild 635 SHA256 16727a44f6033556dc250c6c523e65e87b5ce9a843856f91851ef6e38b1873f6 SHA512 dbb5b0cf408c29eda6f9e6239f0694c05b751d3ea6d7923662f35889bd6ac35ff82ef2683077c442739a99fe5de47a1918cb0107f3d562c340cab573f1a48d1a WHIRLPOOL 2497cdbd6dfffe02012f3f1e7f8d92f23798e380be38f1c96cba72db93ab634d5bca927ef518e390205da5bd1972cda589c39a43bc1cb419062915ffbc47b9b2
+MISC ChangeLog 6861 SHA256 f2d58fc4fbf02404ab64d6919d9b05c6ddfc610bfbd7b1be99054e90a4a5a487 SHA512 9d8706c8174fb067516aae77c79a89f5d8da87ab217a269fe3546d46a1d1da3dda1da49c9cb6c8479c9609503581d234254f8b1999045cefd40010819117f15c WHIRLPOOL 20cabcab3b60e7bb8be3afaa7ad4d65b99da7356e6f1bf077a04af8ea510ef8169ae374ddeca7fb254571054311acc66a93d91e5299fa3e566a1b3332990d752
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRiT5WAAoJELp701BxlEWffEgP/AsJMFxKekfRQsF0X+yFBt0J
-Gd8+dSf3wXNyNWerKFmZ3swtz6WiIUlJPL0h7AZQs6UCYzT90cmOVPLtyaswdrUY
-4f5wGOukLGNwPdEqUNtTGnomSZAiCQFZJtAIn0J/N6i2HpJGlbKQemF+4vJCm10+
-H9hCQN+uIgGp1yrd1+C483ffu2sti/6OGysG77tWwzpnpHtGNncwc4vaw3vDaCzI
-snOQYpyjOQpaD87CtmAo+Dk//FGk1XZsfswTKYwAt5v5xfnlj4BDjLCL4gifC65N
-Sa1AyXNpteGc2plZDSabYoV25O/iMAFg5R8zSvPG8G6o9ZHNQY0G+7Z8FSGBDB4Z
-eAQkWh0/B/KLuLqKjlQtVQV6AU5Uj0F8CMvW6bbIgbtkeqhQT7mVE2TGhQea159U
-d++j2zzt8FCAr/fW2rc7ZA7kxC1TXGF+d0LbjrKdcTAuHBVQi6kDusUbSGxYpUt5
-QL+G32ZEhA+JAhbNzX16mKUmnuz22fCAF6fiSaGvGA91p3R2A8kJMkcweIwrUHCg
-8Lg+8eDxpLpx1olyVxMHJbA9aF78mPU9d9j4TTA0Mb+fFpLp9ek1lSScXQm4hdnv
-c1XSsrLm4aQdHwUtHNgRPPmcDrwm4fwAG3hdFqMkzRv/C05ErlRuwnzghAOlN5EX
-z3CygL4889kNmnqGQh8r
-=6GaI
+iF4EAREIAAYFAlGLTDUACgkQiIP6VqMIqNeBWAD+LE4lw1m1o1SZMLaaA3cL/i7D
+sRWSI/dCKbOD3tX1TUsA+wUa3GFm/0e/K/r2D54O5mMdYmHkXy+HETRRqU6SGBNz
+=f5Uc
 -----END PGP SIGNATURE-----
