@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/net-sftp
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-sftp/ChangeLog,v 1.56 2013/05/07 17:50:47 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-sftp/ChangeLog,v 1.57 2013/05/09 07:11:48 graaff Exp $
+
+*net-sftp-2.1.2 (09 May 2013)
+
+  09 May 2013; Hans de Graaff <graaff@gentoo.org> +net-sftp-2.1.2.ebuild:
+  Version bump.
 
   07 May 2013; Agostino Sarubbo <ago@gentoo.org> net-sftp-2.0.5-r1.ebuild:
   Stable for ppc64, wrt bug #467912
